# nrf-dude

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TODO.md  nrf9160dk_nrf9160_ns.overlay  prj.conf  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
batch/: copy_hex.bat  flash_hex.bat
boards/: nrf9160dk_nrf9160_ns.overlay
hex/: merged.hex
script/: RunTimeCli.py  copy_hex.bat  flash_hex.bat  nrf-automated-cli-commands.txt  nrf-automated-cli-logs.txt  nrf_automated_cli.py  nrf_cli.py
script/AutomatedCli/: AutomatedCli.py  cliCommands.txt  cliLogs.txt
script/Automated_CLI/: nrf-automated-cli-commands.txt  nrf-automated-cli-logs.txt  nrf_automated_cli.py
script/RunTimeCli/: RunTimeCli.py  cliLogs.txt
src/: main.c
src/App/: Cli.c  Cli.h  CliThread.c  CliThread.h
src/App/Cli/: Cli.c  Cli.h  CmdHandler.c  CmdHandler.h
src/App/UartThread/: UartThread.c  UartThread.h
src/Drivers/LedDriver/: LedDriver.c  LedDriver.h
src/Drivers/UartDriver/: UartDriver.c  UartDriver.h
src/Utils/: DriveDriver.c  DriveDriver.h  Utils.h
test/: LedTest.c  UartTest.c
test/TestRunner/: TestRunner.c  TestRunner.h
